--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AuthenticationActivity"
-    >
+    tools:context=".AuthenticationActivity">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottieAnimationView"
@@ -14,9 +13,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:lottie_rawRes="@raw/chit_chatting"
         app:lottie_autoPlay="true"
-        app:lottie_loop="true"/>
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/chit_chatting" />
 
     <TextView
         android:id="@+id/tvHeading"
@@ -32,18 +31,17 @@
         app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />
 
 
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tvLayoutName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:hint="Name"
         app:boxBackgroundColor="@color/white"
         app:boxBackgroundMode="outline"
         app:boxStrokeColor="@color/black"
-        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvHeading">
@@ -105,8 +103,8 @@
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/ic_baseline_shield_24"
             android:drawablePadding="10dp"
-            android:maxLength="12"
             android:inputType="textPassword"
+            android:maxLength="12"
             android:paddingBottom="20dp"
             android:textAlignment="textStart"
             android:textSize="20dp" />
