--- a/app/src/main/res/layout/recycler_message_row.xml
+++ b/app/src/main/res/layout/recycler_message_row.xml
@@ -13,8 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            >
+            app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/leftMessage"
@@ -42,8 +41,8 @@
                     android:id="@+id/leftTimeStampTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="00"
                     android:layout_marginTop="5dp"
+                    android:text="00"
                     android:textColor="@android:color/darker_gray"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/groupReceiverNameTextView" />
@@ -52,19 +51,70 @@
                     android:id="@+id/leftImageView"
                     android:layout_width="250dp"
                     android:layout_height="250dp"
-                    android:scaleType="centerCrop"
                     android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
                     android:visibility="gone"
-                    app:layout_constraintTop_toBottomOf="@id/leftTimeStampTextView"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/leftTimeStampTextView" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/leftAudioConstraint"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/constrant_background_receiver"
+                    android:padding="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/leftTimeStampTextView">
+
+
+                        <ImageButton
+                            android:id="@+id/leftBtnPlayPause"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_baseline_play_arrow_24"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <SeekBar
+                            android:id="@+id/leftSeekBar"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginRight="10dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/leftBtnPlayPause"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/leftAudioCurrentTime"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="00:00"
+                            android:textColor="@color/white"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/leftBtnPlayPause"
+                            app:layout_constraintTop_toBottomOf="@id/leftSeekBar" />
+
+                        <TextView
+                            android:id="@+id/leftAudioTotalDuration"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="00:00"
+                            android:layout_marginRight="10dp"
+                            android:textColor="@color/white"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/leftSeekBar" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/rightChatLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/leftChatLayout">
 
@@ -96,21 +146,57 @@
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
                     android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/rightTimeStampTextView" />
 
-                <ProgressBar
-                    android:id="@+id/progressBar"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/rightAudioConstraint"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="@+id/rightImageView"
-                    app:layout_constraintEnd_toEndOf="@+id/rightImageView"
-                    app:layout_constraintStart_toStartOf="@+id/rightImageView"
-                    app:layout_constraintTop_toTopOf="@id/rightImageView" />
+                    android:background="@drawable/constrant_background_sender"
+                    android:padding="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/rightTimeStampTextView">
+
+
+                        <ImageButton
+                            android:id="@+id/rightBtnPlayPause"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_baseline_play_arrow_24"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <SeekBar
+                            android:id="@+id/rightSeekBar"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            app:layout_constraintEnd_toStartOf="@+id/rightBtnPlayPause"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/rightAudioCurrentTime"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="00:00"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="@+id/rightSeekBar"
+                            app:layout_constraintTop_toBottomOf="@id/rightSeekBar" />
+
+                        <TextView
+                            android:id="@+id/rightAudioTotalDuration"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="16dp"
+                            android:text="00:00"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toStartOf="@+id/rightBtnPlayPause"
+                            app:layout_constraintTop_toBottomOf="@+id/rightSeekBar" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
