--- a/app/src/main/res/layout/activity_group_chat_atcivity.xml
+++ b/app/src/main/res/layout/activity_group_chat_atcivity.xml
@@ -84,8 +84,10 @@
         android:layout_below="@id/toolbarLayout"
         app:layout_constraintBottom_toTopOf="@+id/sendMessageLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/ItemsCardView"
@@ -94,43 +96,93 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginRight="15dp"
         android:visibility="gone"
         app:cardCornerRadius="5dp"
-        app:cardElevation="5dp"
+        app:cardElevation="10dp"
         app:cardUseCompatPadding="true"
         app:layout_constraintBottom_toTopOf="@+id/sendMessageLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginRight="15dp">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/shareGroupImageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:inputType="textCapSentences"
-                android:padding="15dp"
-                android:src="@drawable/ic_baseline_image_24"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintGallery"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/shareGroupAudioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:inputType="textCapSentences"
-                android:padding="15dp"
-                android:src="@drawable/ic_baseline_music_note_24"
+                <ImageView
+                    android:id="@+id/shareGroupImageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/item_background"
+                    android:inputType="textCapSentences"
+                    android:padding="15dp"
+                    android:src="@drawable/ic_baseline_image_24"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Gallery"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/shareGroupImageButton"
+                    app:layout_constraintLeft_toRightOf="@+id/shareGroupImageButton"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/shareGroupImageButton"
+                    app:layout_constraintTop_toBottomOf="@+id/shareGroupImageButton" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintAudio"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/shareGroupImageButton" />
+                app:layout_constraintTop_toBottomOf="@id/constraintGallery">
+
+                <ImageView
+                    android:id="@+id/shareGroupAudioButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/item_background"
+                    android:backgroundTint="#F01443"
+                    android:inputType="textCapSentences"
+                    android:padding="15dp"
+                    android:src="@drawable/ic_baseline_music_note_24"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:tint="@color/white" />
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Audio"
+                    android:textStyle="bold"
+                    android:layout_marginBottom="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/shareGroupAudioButton"
+                    app:layout_constraintStart_toStartOf="@+id/shareGroupAudioButton"
+                    app:layout_constraintTop_toBottomOf="@+id/shareGroupAudioButton" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
